added the predicting the model with toxicity and neutral text

--- a/model.ipynb
+++ b/model.ipynb
@@ -2451,12 +2451,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d38be607",
+   "metadata": {},
+   "source": [
+    "12. #### Prediction the Model "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "aab1f1e2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PREDICTION RESULTS:\n",
+      "--------------------------------------------------\n",
+      "NEUTRAL TEXT:\n",
+      "\"I really enjoyed reading this article about machine learning.\"\n",
+      "target: 0.6150\n",
+      "severe_toxicity: 0.0016\n",
+      "obscene: 0.1721\n",
+      "threat: 0.0517\n",
+      "insult: 0.8108\n",
+      "identity_attack: 0.0452\n",
+      "\n",
+      "\n",
+      "TOXIC TEXT:\n",
+      "\"You're so stupid and I hate everything about you!\"\n",
+      "target: 0.7507\n",
+      "severe_toxicity: 0.0006\n",
+      "obscene: 0.0223\n",
+      "threat: 0.0025\n",
+      "insult: 0.9995\n",
+      "identity_attack: 0.0145\n"
+     ]
+    }
+   ],
+   "source": [
+    "def predict_toxicity(new_text):\n",
+    "    # Clean test using my clean_text\n",
+    "    cleaned_text = clean_text(new_text)\n",
+    "\n",
+    "    # Convert to sequence using the same tokenizer\n",
+    "    sequence = tokenizer.texts_to_sequences([cleaned_text])\n",
+    "    \n",
+    "    # Pad the sequence to match max_len\n",
+    "    padded_sequence = pad_sequences(sequence, maxlen=max_len, \n",
+    "                                   truncating='post', padding='post')\n",
+    "    \n",
+    "    # Make prediction\n",
+    "    prediction = lstm_model.predict(padded_sequence, verbose=0)\n",
+    "    \n",
+    "    # Return results\n",
+    "    return prediction[0]\n",
+    "\n",
+    "# Example inputs\n",
+    "neutral_text = \"I really enjoyed reading this article about machine learning.\"\n",
+    "toxic_text = \"You're so stupid and I hate everything about you!\"\n",
+    "\n",
+    "# Predict toxicity for both examples\n",
+    "print(\"PREDICTION RESULTS:\")\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "# Categories from your model\n",
+    "categories = [\"target\", \"severe_toxicity\", \"obscene\", \"threat\", \"insult\", \"identity_attack\"]\n",
+    "\n",
+    "# Neutral text prediction\n",
+    "neutral_scores = predict_toxicity(neutral_text)\n",
+    "print(\"NEUTRAL TEXT:\")\n",
+    "print(f'\"{neutral_text}\"')\n",
+    "for category, score in zip(categories, neutral_scores):\n",
+    "    print(f\"{category}: {score:.4f}\")\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Toxic text prediction\n",
+    "toxic_scores = predict_toxicity(toxic_text)\n",
+    "print(\"TOXIC TEXT:\")\n",
+    "print(f'\"{toxic_text}\"')\n",
+    "for category, score in zip(categories, toxic_scores):\n",
+    "    print(f\"{category}: {score:.4f}\")"
+   ]
   }
  ],
  "metadata": {
